[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://energy_node.gd" id="1_l1bgl"]
[ext_resource type="Texture2D" uid="uid://ddyg63l0qcs1h" path="res://objects/terminal/terminal_energy_medium.tres" id="2_bu2ol"]
[ext_resource type="AudioStream" uid="uid://bg6wf4kvqhspm" path="res://objects/terminal/terminal_button.wav" id="3_m4icq"]
[ext_resource type="AudioStream" uid="uid://b0cd3474kbv6t" path="res://objects/terminal/terminal_error.ogg" id="4_ypee7"]

[node name="EnergyNode" type="HBoxContainer"]
offset_right = 256.0
offset_bottom = 256.0
script = ExtResource("1_l1bgl")
node_name = ""
current_energy = 2

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 256.0
offset_bottom = 256.0
texture = ExtResource("2_bu2ol")

[node name="EnergyCount" type="Label" parent="TextureRect"]
offset_left = 14.0
offset_top = 137.0
offset_right = 49.0
offset_bottom = 182.0
theme_override_font_sizes/font_size = 30
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NodeName" type="Label" parent="TextureRect"]
offset_left = 18.0
offset_top = 42.0
offset_right = 238.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m4icq")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ypee7")
volume_db = 10.978

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
